# app-build-suite

./: .coveragerc  .envrc  .flake8  .gitignore  .markdownlint.yaml  .markdownlintignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  Makefile.abs.mk  Pipfile  README.md  circleci.Dockerfile  container-entrypoint.sh  dabs.sh  pyproject.toml  renovate.json  renovate.json5  run-abs-in-docker.sh  run-tests-in-docker.sh  setup.py  testrunner.Dockerfile
.circleci/: config.yml
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  push-to-app-catalog.yaml
app_build_suite/: __main__.py  components.py  componentscontainer.py  container.py  errors.py  version.py
app_build_suite/build_steps/: __init__.py  base_test_runner.py  build_step.py  chart_yaml_loader.py  chart_yaml_writer.py  cluster_manager.py  errors.py  giantswarm_helm_validator.py  helm.py  helm_artifacthub_metadata_setter.py  helm_builder_validator.py  helm_chart_builder.py  helm_chart_metadata_builder.py  helm_chart_metadata_finalizer.py  helm_chart_tool_linter.py  helm_chart_yaml_restorer.py  helm_consts.py  helm_git_version_setter.py  helm_home_url_setter.py  helm_requirements_updater.py  helm_template_validator.py  helm_version_setter.py  kube_linter.py  pytest.py  repositories.py  steps.py
app_build_suite/cluster_providers/: __init__.py  cluster_provider.py  external_cluster_provider.py  kind_cluster_provider.py
app_build_suite/utils/: __init__.py  config.py  files.py  git.py  git_url.py  processes.py  yaml_strict.py
app_test_suite/: __init__.py  __main__.py  cluster_manager.py  version.py
app_test_suite/cluster_providers/: __init__.py  external_cluster_provider.py  kind_cluster_provider.py
app_test_suite/steps/: base_test_runner.py  test_stage_helpers.py
docs/: CONTRIBUTING.md  ci-cd-integration.md  configuration-reference.md  helm-build-pipeline.md  helm3-build-pipeline.md  metadata-generation.md  migration-guide.md  pytest-test-pipeline.md  tutorial.md  validators.md
examples/: README.md
examples/apps/: .gitignore
examples/tutorial/: .kube-linter.yaml  Chart.yaml  values.schema.json  values.yaml
resources/ct_schemas/: gs_metadata_chart_schema.yaml
step_exec_lib/: build_step.py  components.py
step_exec_lib/utils/: config.py  files.py
tests/: test_components.py
tests/build_steps/: dummy_build_step.py  helpers.py  test_build_step.py  test_helm.py  test_helm_artifacthub_metadata_setter.py  test_helm_template_validator.py  test_helm_version_setter.py
tests/e2e/: test_example_app.py
tests/utils/: test_files.py  test_git.py  test_git_url.py  test_yaml_strict.py
(+27 files in other folders)
